; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_multi_logical_optimizer.c_CanPushDown.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_multi_logical_optimizer.c_CanPushDown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32* }

@PUSH_DOWN_INVALID_FIRST = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_6__*)* @CanPushDown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @CanPushDown(%struct.TYPE_6__* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %2, align 8
  %7 = load i64, i64* @PUSH_DOWN_INVALID_FIRST, align 8
  store i64 %7, i64* %3, align 8
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  store i32* %10, i32** %4, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = call i32 @UnaryOperator(i32* %11)
  store i32 %12, i32* %5, align 4
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @BinaryOperator(i32* %13)
  store i32 %14, i32* %6, align 4
  %15 = load i32, i32* %5, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %1
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %19 = load i32*, i32** %4, align 8
  %20 = bitcast i32* %19 to %struct.TYPE_6__*
  %21 = call i64 @Commutative(%struct.TYPE_6__* %18, %struct.TYPE_6__* %20)
  store i64 %21, i64* %3, align 8
  br label %30

22:                                               ; preds = %1
  %23 = load i32, i32* %6, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %29

25:                                               ; preds = %22
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %27 = load i32*, i32** %4, align 8
  %28 = call i64 @Distributive(%struct.TYPE_6__* %26, i32* %27)
  store i64 %28, i64* %3, align 8
  br label %29

29:                                               ; preds = %25, %22
  br label %30

30:                                               ; preds = %29, %17
  %31 = load i64, i64* %3, align 8
  %32 = load i64, i64* @PUSH_DOWN_INVALID_FIRST, align 8
  %33 = icmp ne i64 %31, %32
  %34 = zext i1 %33 to i32
  %35 = call i32 @Assert(i32 %34)
  %36 = load i64, i64* %3, align 8
  ret i64 %36
}

declare dso_local i32 @UnaryOperator(i32*) #1

declare dso_local i32 @BinaryOperator(i32*) #1

declare dso_local i64 @Commutative(%struct.TYPE_6__*, %struct.TYPE_6__*) #1

declare dso_local i64 @Distributive(%struct.TYPE_6__*, i32*) #1

declare dso_local i32 @Assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
